[package]
authors = ['Logion Team <https://github.com/logion-network>']
description = 'Implements Logion shared components.'
edition = '2018'
homepage = 'https://logion.network'
license = 'Apache 2.0'
name = 'logion-shared'
readme = 'README.md'
repository = 'https://github.com/logion-network/logion-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'frame-support/std',
]
