[package]
authors = ['Logion Team <https://github.com/logion-network>']
description = 'Pallet implements Logion Vault.'
edition = '2018'
homepage = 'https://logion.network'
license = 'Apache 2.0'
name = 'pallet-logion-vault'
repository = 'https://github.com/logion-network/logion-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
logion-shared = { default-features = false, path = '../shared/', version = '0.1.0' }
pallet-multisig = { default-features = false, version='3.0.0' }
serde = { default-features = false, version = "1.0.119" }
sp-std = { default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-multisig/std',
	'serde/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
